# Backend/openapi.yaml
@@ -110,4 +110,94 @@ paths:
           description: User is authenticated
         "401":
           description: Not authenticated
+  /api/messages/users:
+    get:
+      summary: Get users for sidebar messaging
+      tags:
+        - Messages
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: List of users fetched successfully
+        "401":
+          description: Unauthorized
+  /api/messages/{id}:
+    get:
+      summary: Get messages by conversation ID
+      tags:
+        - Messages
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: ID of the user or chat
+      responses:
+        "200":
+          description: Messages retrieved successfully
+        "401":
+          description: Unauthorized
+        "404":
+          description: Messages not found
+  /api/messages/send/{id}:
+    post:
+      summary: Send a message to a user
+      tags:
+        - Messages
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: Recipient user ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - message
+              properties:
+                message:
+                  type: string
+      responses:
+        "201":
+          description: Message sent successfully
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+  /api/messages/delete:
+    delete:
+      summary: Delete a message
+      tags:
+        - Messages
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - messageId
+              properties:
+                messageId:
+                  type: string
+      responses:
+        "200":
+          description: Message deleted successfully
+        "401":
+          description: Unauthorized
+        "404":
+          description: Message not found
 tags: []
